--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <img src="img/botonwhatsappdirecto.png" alt="WhatsApp Directo">
     </a>
 
-    <a href="https://facebook.com/psoeteror" target="_blank">
+    <a href="https://facebook.com/terorpsoe" target="_blank">
       <img src="img/botonfacebook.png" alt="Facebook PSOE Teror">
     </a>
 
