--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <img src="img/botonwhatsappcanal.png" alt="Canal de WhatsApp">
     </a>
 
-    <a href="https://wa.me/yournumber" target="_blank">
+    <a href="https://wa.me/34623769320" target="_blank">
       <img src="img/botonwhatsappdirecto.png" alt="WhatsApp Directo">
     </a>
 
