--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 
   <!-- Contenedor de imágenes con enlaces -->
   <div class="grid">
-    <a href="https://whatsapp.com/channel/yourchannel" target="_blank">
-      <img src="img/botonwhatsappcanal.png" alt="Canal de WhatsApp">
+    <a href="https://chat.whatsapp.com/CnrIXOFF3ab59efCFeku1Z?mode=ems_wa_c" target="_blank">
+      <img src="img/botonwhatsappcanal.png" alt="Comunidad de WhatsApp">
     </a>
 
     <a href="https://wa.me/34623769320" target="_blank">
